tests/NormalTests/paczka1/fuzzy1/77722675.err
Error in line 13: vxsAyMoR S469 C0,5
Error in line 16: 1zKvc S212 4,33
Error in line 15: vxsAyMoR S469 41,0
Error in line 18: vxsAyMoR S212 43,1
